<resources>
    <string name="app_name">EDMW</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions.</string>

    <string name="action_refresh">Refresh</string>
    <string name="hide_image">Load Images Automatically</string>
    <string name="title_thread_activity">Thread</string>
    <string name="title_login_activity">Login</string>
    <string name="title_topic_activity">Topic</string>
    <string name="login">Please Log in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_themeId">Theme</string>
    <string name="pref_themeIds_default">Default</string>
    <string name="pref_downloadImage">Download Image</string>
    <string name="pref_downloadImages_default">Only on WiFi</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_subscriptions">Subscriptions</string>
    <string name="title_activity_recent_posts">Recent Posts</string>
</resources>
